page 3 firdst version

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ A key theme in the work is the interplay between the familiar and the unknown. T
                     </div>
                 </a>
                 
-                <div class="grid-item">
+                <a href="page3.html" class="grid-item-link">
+                 <div class="grid-item">
                     <img src="image/computer.png" alt="Spiritual Nearby">
                     <p>Spiritual "Nearby"</p>
-                </div>
+                 </div>
+                </a>
                 <div class="grid-item">
                     <img src="image/芯片BW.png" alt="Functional Nearby">
                     <p>Functional "Nearby"</p>
