--- a/page3.html
+++ b/page3.html
@@ -39,23 +39,28 @@
         
 
     <div class="image-grid">
-        
+        <div class="grid-container">
             <a href="https://www.cambridge.org/core/books/connecting-the-nineteenthcentury-world/12743072DEB4F98C126DF5E81895FA2F" target="_blank">
                 <img src="image/telegraphic.jpg" alt="Article 1">
                 <span>Connecting the Nineteenth-Century World:<br>The Telegraph and Globalization</span>
                 <p> The Telegraph and Telephone: Breaking Spatial Constraints</p>
             </a>
+        </div>
+        <div class="grid-container">
             <a href="https://11th.ro/en/blog-en/the-impact-of-social-media-on-human-relationships-uncovering-the-effects-of-digital-connection-loss/" target="_blank">
                 <img src="image/internet.jpg" alt="Article 2">
                 <span>The Impact of Social Media on Human Relationships:<br>Uncovering the Effects of Digital Connection Loss</span>
                 <p>The Internet: The Birth of Virtual Proximity</p>
             </a>
-
+        </div>
+        <div class="grid-container">
             <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC4183915/?source=post_page---------------------------" target="_blank">
                 <img src="image/telephone.jpg" alt="Article 3">
                 <span>Cyberpsychology, Behavior, and Social Networking:<br>Online Social Networking and Mental Health</span>
                 <p>Mobile Internet: The Era of Perpetual Connectivity</p>
             </a>
+        </div>
+        <div class="grid-container">
             <a href="https://www.convinceandconvert.com/social-media/social-media-pretend-friends-and-the-lie-of-false-intimacy/" target="_blank">
                 <img src="image/socialmedia.jpg" alt="Article 4">
                 <span>Social Media, Pretend Friends,<br>and the Lie of False Intimacy</span>
